As per https://issues.apache.org/jira/browse/AXIS2-4927, modifying the scripts to support an Axis2 specific endorsed directory